tests/errors/002-parsing/003-expected-expression/004-in-arguments-list/003-initial-decl-assign.xxx
x := (a := , b := 2) => () { }

// @TODO This should yield the same error.
// x := (a :=, b := 2) => () { }
